package ch01;

public interface FlyBehavior {
  public void fly();
}
