package ch01;

public class FlyNoWay implements FlyBehavior {
  public void fly() {
    System.out.println("飛べません");
  }
}
