package ch01;

public class FlyWithWings implements FlyBehavior {
  public void fly() {
    System.out.println("飛んでいます！！");
  }
}
